# mcpdemo

./: .gitignore  LICENSE  README.md  meta_info.json  package-lock.json  package.json  process_tickers.py  pyproject.toml  stocks.py  weather.py  workshop.md
financial_analyst_mcp/: process_tickers.py  stocks_client.py  stocks_server.py  tickers.json  tickers.txt
function_calling/: weather.py
my_first_mcp_server/: weather_client.py  weather_server.py
