[project]
name = "mcpdemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ddgs>=9.5.4",
    "duckduckgo-search>=8.1.1",
    "httpx>=0.28.1",
    "matplotlib>=3.10.5",
    "mcp[cli]>=1.13.0",
    "yfinance>=0.2.65",
]
