[project]
name = "mcpdemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ddgs>=9.5.4",
    "duckdb>=1.4.3",
    "duckduckgo-search>=8.1.1",
    "fastmcp>=2.14.3",
    "httpx>=0.28.1",
    "langchain-mcp-adapters>=0.2.1",
    "matplotlib>=3.10.5",
    "mcp-openai[cli]>=0.2.0",
    "mcp[cli]>=1.13.0",
    "openai>=2.15.0",
    "yfinance>=0.2.65",
]
